2010-12-27  Steffen Ritter  <typo3@steffen-ritter.net>

	* FYI: Fixed bug #16476: tcaTree should work in flexforms, too
	* Follow-up to #16218: Bug/Feature: TCE-Forms does not use sprite icons -- this leads to inconsistency

2010-12-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16845: Better API for Update Wizards in the Install Tool (Thanks to Benjamin Mack)

2010-12-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta3

2010-12-27  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid to 1.3.0beta3

2010-12-26  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16841: Webkit performance issue with topbar status "in workspace"

2010-12-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16611: [scheduler] tx_scheduler_CronCmd needs refactoring

2010-12-26  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16838: Scheduler: Use new CSH rendering API

2010-12-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #16842: Add Canadian French language to TYPO3 core
	* Follow-up to issue #16842: Add Canadian French language to TYPO3 core (add flag for 'qc')

2010-12-26  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #16661: include TSRef changes (4.4) for t3editor code completion (thanks to Christian Kartnig)
	* Fixed bug #16663: include TSRef changes (4.5) for t3editor code completion (thanks to Christian Kartnig)

2010-12-26  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16774: t3ver_stage should be int(11) instead of tinyint(4)

2010-12-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15969: Task Center - sys_action: setting labels_ignoreprefix from sql query is ignored (Thanks to Andreas Kiessling)
	* Fixed bug #16824: [Caching framework] Update to latest FLOW3 version

2010-12-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16836: Remove useless alertbox (Thanks to Rens Admiraal)
	* Fixed bug #16800: Exec-wrapper
	* Fixed bug #16770: Make recycler stateful
